# kurogane

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix
docs/: recipes.md  winit.md
kurogane/: Cargo.toml
kurogane-cli/: Cargo.toml
kurogane-cli/src/: bundle.rs  clean.rs  dev.rs  main.rs
kurogane-cli/templates/ipc/src/: main.rs
kurogane-cli/templates/showcase/src/: main.rs
kurogane-layout/: Cargo.toml
kurogane-layout/src/: bundle.rs  discover.rs  layout.rs  lib.rs  platform.rs  profile.rs  validate.rs
kurogane/src/: app.rs  browser.rs  browser_info_map.rs  browser_registry.rs  cef_app.rs  chromium_flags.rs  client.rs  error.rs  fs.rs  lib.rs  message_loop.rs  runtime.rs  scheme.rs  shutdown.rs  window.rs  window_registry.rs
kurogane/src/app/: resolver.rs
kurogane/src/bridge/: runtime.js
kurogane/src/gpu/: backend.rs  detection.rs  linux.rs
kurogane/src/ipc/: binary.rs  binary_buffer.rs  browser.rs  browser_state.rs  envelope.rs  handle_cell.rs  mod.rs  pending.rs  protocol.rs  renderer.rs  renderer_state.rs  request_response.rs  responder.rs  router.rs  rpc.rs  utils.rs
kurogane/src/ipc/binary/: mod.rs  renderer.rs
kurogane/src/ipc/event/: browser.rs  mod.rs  renderer.rs
kurogane/src/ipc/rpc/: mod.rs  renderer.rs
kurogane/src/ipc/stream/: browser.rs  mod.rs  renderer.rs
kurogane/src/ipc/transport/: cef_shm.rs  message.rs  shm.rs
tests/: Cargo.toml  benchmark.rs  delegates.rs  ipc.rs  multi-window.rs  popups.rs  pump.rs  stream-benchmark.rs  window-management.rs
tests/benchmark/: runner.js
tests/ipc/: index.html
tests/popups/: index.html
tests/stream-benchmark/: dashboard.css  index.html  runner.js
tests/winit/: README.md  host_window.rs  views_poll.rs  views_scheduler.rs  views_timer.rs
