[workspace]
resolver = "2"
members = [
    "kurogane",
    "kurogane-cli",
    "kurogane-layout",
    "tests"
]

[workspace.package]
version = "0.0.4"
edition = "2024"
license = "MIT"
authors = [
    "Piyush Raj <hello@piyushraj.org>"
]
repository = "https://github.com/0x48piraj/kurogane"

[workspace.dependencies]
cef = { git = "https://github.com/tauri-apps/cef-rs", rev = "c73f792f245d71ac1716448cdb7c165c8009e20c" }
kurogane-layout = { path = "kurogane-layout" }
