[package]
name = "kurogane-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "kurogane"
path = "src/main.rs"

[dependencies]
kurogane-layout.workspace = true
anyhow = "1"
cargo_metadata = "0.23.1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
download-cef = "2.3"
include_dir = "0.7.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
colored = "3"
semver = "1.0.28"

[build-dependencies]
cargo_metadata = "0.23.1"
