[package]
name = "kurogane"
version = "0.0.1"
edition = "2024"

[dependencies]
kurogane-layout.workspace = true
cef = { git = "https://github.com/tauri-apps/cef-rs", rev = "dab51658a8a6317040eb0ebab39b68ede42c836f" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
dirs = "6"
shared_memory = "0.12.4"
mime_guess = "2"
url = "2.5.8"
percent-encoding = "2.3.2"
ctrlc = { version = "3.5.2", features = ["termination"] }

[dev-dependencies]
tempfile = "3"
proptest = "1"

[features]
debug = []
html_canvas_compositor = []
