[package]
name = "kurogane-tests"
version = "0.0.1"
edition = "2024"

[dependencies]
kurogane = { path = "../kurogane" }
serde_json = "1.0.149"
winit = "0.30"
raw-window-handle = "0.6"

[[bin]]
name = "benchmark"
path = "benchmark.rs"

[[bin]]
name = "gpu"
path = "gpu.rs"

[[bin]]
name = "files-cors"
path = "files-cors.rs"

[[bin]]
name = "dom"
path = "dom.rs"


[[bin]]
name = "pump"
path = "pump.rs"

[[bin]]
name = "css-to-shader"
path = "css-to-shader.rs"

[[bin]]
name = "ipc"
path = "ipc.rs"

[[bin]]
name = "wasm"
path = "wasm.rs"

[[bin]]
name = "winit"
path = "winit.rs"

[[bin]]
name = "popups"
path = "popups.rs"
