[package]
name = "kurogane-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[dependencies]
kurogane = { path = "../kurogane" }
serde_json = "1.0.149"
winit = "0.30"
raw-window-handle = "0.6"

[[bin]]
name = "benchmark"
path = "benchmark.rs"

[[bin]]
name = "gpu"
path = "gpu.rs"

[[bin]]
name = "files-cors"
path = "files-cors.rs"

[[bin]]
name = "dom"
path = "dom.rs"

[[bin]]
name = "pump"
path = "pump.rs"

[[bin]]
name = "css-to-shader"
path = "css-to-shader.rs"

[[bin]]
name = "ipc"
path = "ipc.rs"

[[bin]]
name = "wasm"
path = "wasm.rs"

[[bin]]
name = "winit_views_poll"
path = "winit/views_poll.rs"

[[bin]]
name = "winit_views_timer"
path = "winit/views_timer.rs"

[[bin]]
name = "winit_views_scheduler"
path = "winit/views_scheduler.rs"

[[bin]]
name = "winit_native_embedding"
path = "winit/host_window.rs"

[[bin]]
name = "popups"
path = "popups.rs"

[[bin]]
name = "multi-window"
path = "multi-window.rs"
