[package]
name = "kurogane-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[dependencies]
cef.workspace = true
kurogane = { path = "../kurogane" }
serde_json = "1.0.149"
winit = "0.30"
raw-window-handle = "0.6"

[[example]]
name = "benchmark"
path = "benchmark.rs"

[[example]]
name = "gpu"
path = "gpu.rs"

[[example]]
name = "files-cors"
path = "files-cors.rs"

[[example]]
name = "dom"
path = "dom.rs"

[[example]]
name = "pump"
path = "pump.rs"

[[example]]
name = "css-to-shader"
path = "css-to-shader.rs"

[[example]]
name = "ipc"
path = "ipc.rs"

[[example]]
name = "wasm"
path = "wasm.rs"

[[example]]
name = "winit_views_poll"
path = "winit/views_poll.rs"

[[example]]
name = "winit_views_timer"
path = "winit/views_timer.rs"

[[example]]
name = "winit_views_scheduler"
path = "winit/views_scheduler.rs"

[[example]]
name = "winit_native_embedding"
path = "winit/host_window.rs"

[[example]]
name = "popups"
path = "popups.rs"

[[example]]
name = "multi-window"
path = "multi-window.rs"

[[example]]
name = "window-management"
path = "window-management.rs"

[[example]]
name = "delegates"
path = "delegates.rs"

[[bin]]
name = "stream-benchmark"
path = "stream-benchmark.rs"
